--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
-}
+/* FileUpload.css */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.file-upload {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.dropzone {
+  border: 2px dashed #007bff;
+  padding: 20px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: border-color 0.3s ease-in-out;
+  width: 300px;
 }
 
-@keyframes App-logo-spin {
+.dropzone p {
+  font-size: 18px;
+  color: #007bff;
+}
+
+.dropzone:hover {
+  border-color: #ff6b6b; /* Change border color when hovering */
+}
+
+/* Add a subtle box shadow when hovering */
+.dropzone:hover {
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.rotate {
+  animation: rotate 2s linear infinite; /* 2s duration, linear timing, infinite rotation */
+}
+
+@keyframes rotate {
   from {
-    transform: rotate(0deg);
+    transform: rotate(0deg); /* Start rotation from 0 degrees */
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(360deg); /* Rotate to 360 degrees */
+  }
+}
+
+
+
+
+/* Gallery.css */
+
+.image-viewer {
+  text-align: center;
+  padding: 20px;
+}
+
+.image-viewer h2 {
+  font-size: 28px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+.gallery-item {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.gallery-item:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.gallery img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px 10px 0 0;
+  object-fit: cover;
+  transition: opacity 0.3s;
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+.gallery-item:hover img {
+  opacity: 0.8;
+}
+
+
+/* Fade-in animation */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
